# CosmicWebs

./: .gitignore  Cargo.toml  generate-docs-index  pyproject.toml
docs/: density_slices.html  index.html  k_powa_density_slices.html  no_powa_density_slices.html  pancakes_density_slices.html  pure-pancake.html
presentation/: presentation.typ  references.bib  script.typ
prof_bagla/: Makefile  fft.f90  fort.11  fort.12  fort.13  fort.14  fort.15  init.x  initialise.f90  treedefs.f90  treedefs.mod
src/: main.rs
term_paper/: Zeldovich_Approximation_Kshitish_MS22174.typ  references.bib  term-paper.typ
visualization/: eisenstein_hu.py  generate_docs_index.py  plots.py  prof_bagla.py  pure_pancake.py
